# groove-link

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
controller/: .gitignore  pom.xml
docs/: CLI_SEARCH_SPEC.md  INDEX-bitwig-control-surface-api.md  INDEX-bitwig-user-guide.md  SEMANTIC_DISCOVERY_PLAN.md  bitwig-control-surface-api.md  bitwig-user-guide.md  youtube-demo-script.md
examples/: bass.abc  bass.mid  cop-show.yaml  fight-song.yaml  heart-cage.yaml  lofi-study.yaml  midnight-drive.yaml  morning-light-bass.abc  morning-light-bass.mid  morning-light-drums.abc  morning-light-drums.mid  morning-light-pad.abc  morning-light-pad.mid  morning-light.yaml  piano-track.yaml  piano.abc  piano.mid  radio-pop.yaml  rainy-afternoon.yaml  tension.yaml  vast.yaml  windfall.yaml
examples/abc/: bass.abc  cage-bass.abc  cage-drums.abc  cage-lead.abc  cage-rhythm.abc  cage-synth.abc  cop-show-bass.abc  cop-show-clav.abc  cop-show-drums.abc  cop-show-guitar.abc  cop-show-horns.abc  fight-drums.abc  fight-glock.abc  fight-sousaphone.abc  fight-trombones.abc  fight-trumpets.abc  lofi-bass.abc  lofi-drums.abc  lofi-keys.abc  midnight-arp.abc  midnight-bass.abc  midnight-drums.abc  midnight-lead.abc  morning-light-piano.abc  pop-bass.abc  pop-drums.abc  pop-keys.abc  pop-lead.abc  pop-pad.abc  pop-pluck.abc  rainy-afternoon-bass.abc  rainy-afternoon-piano.abc  rainy-afternoon-strings.abc  tension-brass.abc  tension-cello.abc  tension-pad.abc  tension-timpani.abc  vast-drone.abc  vast-melody.abc  vast-texture.abc  (+3 more)
examples/midi/: cage-bass.mid  cage-drums.mid  cage-lead.mid  cage-rhythm.mid  cage-synth.mid  cop-show-bass.mid  cop-show-clav.mid  cop-show-drums.mid  cop-show-guitar.mid  cop-show-horns.mid  fight-drums.mid  fight-glock.mid  fight-sousaphone.mid  fight-trombones.mid  fight-trumpets.mid  lofi-bass.mid  lofi-drums.mid  lofi-keys.mid  midnight-arp.mid  piano.mid  (+24 more)
mcp-server/: Cargo.toml
mcp-server/src/: bitwig.rs  main.rs  protocol.rs  server.rs
tests/: __init__.py
(+537 files in other folders)
