[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitwig-cli"
version = "0.1.0"
description = "CLI for controlling Bitwig Studio via JSON-RPC and OSC"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
osc = [
    "pyliblo3>=0.16.0",
]

[project.scripts]
bitwig = "bitwig_cli.main:app"
groove-link = "bitwig_cli.groovelink:app"

[tool.hatch.build.targets.wheel]
packages = ["src/bitwig_cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
