[package]
name = "groove_mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for Bitwig Studio control"

[dependencies]
# MCP protocol
rmcp = { version = "0.12", features = ["server", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Async utilities
futures = "0.3"
